test/expect/cmd.castxml-wrong-epic-version.stderr.txt
^error: '--castxml-output=<v>' accepts only '1' as '<v>'!

Usage: castxml .*$
